// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`-> OK 1`] = `
Object {
  "exp_boxes": "412205,0,-1;470852,0,49;80556,0,82;440864,0,90;464543,0,87;414875,0,99;399490,0,26",
  "status": Object {
    "status": 1,
  },
  "uaz": Array [
    Array [
      Object {
        "CONTEXT": Object {
          "MAIL": Object {
            "experiment": Object {
              "data": Object {},
              "isEnabled": true,
              "name": "ios_new_year_2022",
              "testId": "470852",
            },
          },
        },
        "HANDLER": "MAIL",
      },
    ],
    Array [
      Object {
        "CONTEXT": Object {
          "MAIL": Object {
            "experiment": Object {
              "data": Object {
                "dark_theme": Object {
                  "shows": 10,
                },
                "external_mails": Object {
                  "shows": 10,
                },
                "link_phonish": Object {
                  "shows": 10,
                },
                "manage_subscriptions": Object {
                  "shows": 10,
                },
                "turn_on_notifications": Object {
                  "shows": 10,
                },
              },
              "isEnabled": true,
              "name": "promos_config",
              "testId": "80556",
            },
          },
        },
        "HANDLER": "MAIL",
      },
    ],
    Array [
      Object {
        "CONTEXT": Object {
          "MAIL": Object {
            "experiment": Object {
              "data": Object {},
              "isEnabled": true,
              "name": "ios_scanner",
              "testId": "440864",
            },
          },
        },
        "HANDLER": "MAIL",
      },
    ],
    Array [
      Object {
        "CONTEXT": Object {
          "MAIL": Object {
            "experiment": Object {
              "isEnabled": false,
              "name": "ios_filters",
              "testId": "464543",
            },
          },
        },
        "HANDLER": "MAIL",
      },
    ],
    Array [
      Object {
        "CONTEXT": Object {
          "MAIL": Object {
            "experiment": Object {
              "isEnabled": false,
              "name": "backup_feature",
              "testId": "414875",
            },
          },
        },
        "HANDLER": "MAIL",
      },
    ],
    Array [
      Object {
        "CONTEXT": Object {
          "MAIL": Object {
            "experiment": Object {
              "data": Object {},
              "isEnabled": true,
              "name": "exclusive_email",
              "testId": "399490",
            },
          },
        },
        "HANDLER": "MAIL",
      },
    ],
  ],
}
`;

exports[`дергает сервис с правильными параметрами 1`] = `
Array [
  Array [
    "experiments",
    Object {
      "uaasRequest": Object {
        "ConfigType": "PRODUCTION",
        "UsersplitRequestParams": Object {
          "Ip": "FAKE_IP",
          "Location": "FAKE_LOCATION",
          "Restrictions": Object {
            "MobilePlatform": "iphone",
            "Service": "mail-mobile-apps",
          },
          "SplitIds": Object {
            "Uuid": "deadbeef42",
          },
          "Timestamp": 1580554500751,
        },
      },
    },
  ],
]
`;

exports[`ошибки -> PERM_FAIL 1`] = `
Object {
  "status": Object {
    "phrase": "PERM_FAIL 400",
    "status": 3,
  },
}
`;

exports[`ошибки -> TMP_FAIL 1`] = `
Object {
  "status": Object {
    "phrase": "TMP_FAIL 500",
    "status": 2,
  },
}
`;
